--- a/hey_wifi.service
+++ b/hey_wifi.service
@@ -1,11 +1,11 @@
 [Unit]
-Description=Setup WiFi through sound wave
+Description=Setup WiFi through sound
 After=alsa-restore.service mosquitto.service
  
 [Service]
 Type=simple
-WorkingDirectory=/home/pi/wave
-ExecStart=/home/pi/wave/voicen_wifi_setup
+WorkingDirectory=/tmp
+ExecStart=/usr/local/bin/hey_wifi
 User=root
  
 [Install]
